# EQ_EDIT

./: CMakeLists.txt  README.md  example1.cpp  example2.cpp
include/: EQ_EDIT.hpp
